--- a/new-portfolio/package.json
+++ b/new-portfolio/package.json
@@ -2,7 +2,7 @@
   "name": "new-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://valery2590.github.io/portfolio",
+  "homepage":"http://valery2590.github.io/new-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
