--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
 node_modules
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+.yarn/
+
+# Build output
+dist/
+build/
+
+# Editor/IDE files
+.vscode/
+.idea/
+.DS_Store
+*.log
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+.env.test
