--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-node_modules
 # Node.js
 node_modules/
 npm-debug.log*
@@ -23,3 +22,6 @@ build/
 .env.development
 .env.production
 .env.test
+node_modules
+
+.yarn
