--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
-.yarn/
+
 
 # Build output
 dist/
@@ -24,4 +24,13 @@ build/
 .env.test
 node_modules
 
-.yarn
+# Yarn
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+.yarnrc.yml
+yarn.lock
+.yarn/
